# paper2slides-plus

./: Dockerfile  README.md  README_ja.md  README_zh-CN.md  README_zh-TW.md  api.py  app.py  docker-compose.yml  paper2slides.py  pyproject.toml  requirements.txt
docker_scripts/: yolo11_doc_layout_extract.py
prompts/: __init__.py  config.yaml  manager.py
src/: __init__.py  beamer_utils.py  compiler.py  core.py  history.py  latex_utils.py  llm_client.py  pdf_utils.py
